--- a/index.html
+++ b/index.html
@@ -1,79 +1,120 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
-    <meta name="description" content="Jquery MultiCheck : " />
+<head>
+    <link rel="stylesheet" href="css/bootstrap.css" />
+    <link rel="stylesheet" href="css/idea.css" />
+    <link rel="stylesheet" href="css/jquery.multicheck.css" />
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <script src="js/jquery.multicheck.js"></script>
+    <script src="js/highlight.pack.js"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
 
-    <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
+</head>
 
-    <title>Jquery MultiCheck</title>
-  </head>
+<body>
+    <script type="text/javascript">
+    $(function() {
+        $('#example1').multicheck();
+        $('#example2, #example3').multicheck({label_wrap: '<div class="checkbox"></div>'});
+    });
+    </script>
 
-  <body>
-
-    <!-- HEADER -->
-    <div id="header_wrap" class="outer">
-        <header class="inner">
-          <a id="forkme_banner" href="https://github.com/jurrick/jquery-multicheck">View on GitHub</a>
-
-          <h1 id="project_title">Jquery MultiCheck</h1>
-          <h2 id="project_tagline"></h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/jurrick/jquery-multicheck/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/jurrick/jquery-multicheck/tarball/master">Download this project as a tar.gz file</a>
-            </section>
-        </header>
+    <div class="container">
+      <div class="header">
+        <ul class="nav nav-pills pull-right">
+          <li><a href="http://github.com/jurrick/multicheck">View on GitHub</a></li>
+        </ul>
+        <h3 class="text-muted">MultiCheck</h3>
+      </div>
+      <div class="jumbotron lead text-center">MultiCheck is jquery plugin which convert your multiple select in set of checkboxes</div>
+      <h3>Basic usage</h3>
+      <div class="row">
+        <div class="col-md-9">
+          <h4>HTML</h4>
+          <pre><code>&lt;select multiple="multiple"&gt;
+  &lt;option value="red"&gt;Red&lt;/option&gt;
+  &lt;option value="green"&gt;Green&lt;/option&gt;
+  &lt;option value="blue"&gt;Blue&lt;/option&gt;
+&lt;/select&gt;</code></pre>
+          <h4>JavaScript</h4>
+          <pre><code>$('select').multicheck();</code></pre>
+        </div>
+        <div class="col-md-3">
+          <h4>Convert from</h4>
+          <select multiple="multiple">
+              <option value="red">Red</option>
+              <option value="blue">Blue</option>
+              <option value="green">Green</option>
+          </select>
+          <h4>to</h4>
+          <select name="color" id="example1" multiple="multiple">
+              <option value="red">Red</option>
+              <option value="blue">Blue</option>
+              <option value="green">Green</option>
+          </select>
+        </div>
+      </div>
+      <h3>Bootstrap style</h3>
+      <div class="row">
+        <div class="col-md-9">
+          <h4>HTML</h4>
+          <pre><code>&lt;select multiple="multiple"&gt;
+  &lt;option data-label-class="label label-danger" value="red"&gt;Red&lt;/option&gt;
+  &lt;option data-label-class="label label-primary" value="green"&gt;Green&lt;/option&gt;
+  &lt;option data-label-class="label label-success" value="blue"&gt;Blue&lt;/option&gt;
+&lt;/select&gt;</code></pre>
+          <h4>JavaScript</h4>
+          <pre><code>$('select').multicheck({
+  label_wrap: '&lt;div class="checkbox"&gt;&lt;/div&gt;'
+});</code></pre>
+        </div>
+        <div class="col-md-3">
+          <h4>Convert from</h4>
+          <select multiple="multiple">
+              <option value="red">Red</option>
+              <option value="blue">Blue</option>
+              <option value="green">Green</option>
+          </select>
+          <h4>to</h4>
+          <select name="color" id="example2" multiple="multiple">
+              <option value="red">Red</option>
+              <option value="blue">Blue</option>
+              <option value="green">Green</option>
+          </select>
+        </div>
+      </div>
+      <h3>Bootstrap style with label classes</h3>
+      <div class="row">
+        <div class="col-md-9">
+          <h4>HTML</h4>
+          <pre><code>&lt;select multiple="multiple"&gt;
+  &lt;option data-label-class="label label-danger" value="red"&gt;Red&lt;/option&gt;
+  &lt;option data-label-class="label label-primary" value="green"&gt;Green&lt;/option&gt;
+  &lt;option data-label-class="label label-success" value="blue"&gt;Blue&lt;/option&gt;
+&lt;/select&gt;</code></pre>
+          <h4>JavaScript</h4>
+          <pre><code>$('select').multicheck({
+  label_wrap: '&lt;div class="checkbox"&gt;&lt;/div&gt;'
+});</code></pre>
+        </div>
+        <div class="col-md-3">
+          <h4>Convert from</h4>
+          <select multiple="multiple">
+              <option data-label-class="label label-danger" value="red">Red</option>
+              <option data-label-class="label label-primary" value="blue">Blue</option>
+              <option data-label-class="label label-success" value="green">Green</option>
+          </select>
+          <h4>to</h4>
+          <select name="color" id="example3" multiple="multiple">
+              <option data-label-class="label label-danger" value="red">Red</option>
+              <option data-label-class="label label-primary" value="blue">Blue</option>
+              <option data-label-class="label label-success" value="green">Green</option>
+          </select>
+        </div>
+      </div>
     </div>
+</body>
 
-    <!-- MAIN CONTENT -->
-    <div id="main_content_wrap" class="outer">
-      <section id="main_content" class="inner">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-    </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Jquery MultiCheck maintained by <a href="https://github.com/jurrick">jurrick</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
-  </body>
 </html>
