Remove data-label-class attribute for first Bootstrap example

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
         <div class="col-md-9">
           <h4>HTML</h4>
           <pre><code>&lt;select multiple="multiple"&gt;
-  &lt;option data-label-class="label label-danger" value="red"&gt;Red&lt;/option&gt;
-  &lt;option data-label-class="label label-primary" value="green"&gt;Green&lt;/option&gt;
-  &lt;option data-label-class="label label-success" value="blue"&gt;Blue&lt;/option&gt;
+  &lt;option value="red"&gt;Red&lt;/option&gt;
+  &lt;option value="green"&gt;Green&lt;/option&gt;
+  &lt;option value="blue"&gt;Blue&lt;/option&gt;
 &lt;/select&gt;</code></pre>
           <h4>JavaScript</h4>
           <pre><code>$('select').multicheck({
