Fix link to github

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li><a href="http://github.com/jurrick/multicheck">View on GitHub</a></li>
+          <li><a href="http://github.com/jurrick/jquery-multicheck">View on GitHub</a></li>
         </ul>
         <h3 class="text-muted">MultiCheck</h3>
       </div>
