--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="css/bootstrap.css" />
     <link rel="stylesheet" href="css/idea.css" />
     <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/jquery.multicheck.css" />
+    <link rel="stylesheet" href="css/jquery.multicheckbox.css" />
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src="js/bootstrap.js"></script>
-    <script src="js/jquery.multicheck.js"></script>
+    <script src="js/jquery.multicheckbox.js"></script>
     <script src="js/highlight.pack.js"></script>
     <script>hljs.initHighlightingOnLoad();</script>
 
@@ -17,20 +17,20 @@
 <body>
     <script type="text/javascript">
     $(function() {
-        $('#example1').multicheck();
-        $('#example2').multicheck({scroll_wrapper_enabled: true});
-        $('#example3, #example4').multicheck({label_wrap: '<div class="checkbox"></div>'});
+        $('#example1').multicheckbox();
+        $('#example2').multicheckbox({scroll_wrapper_enabled: true});
+        $('#example3, #example4').multicheckbox({label_wrap: '<div class="checkbox"></div>'});
     });
     </script>
 
     <div class="container">
       <div class="header">
         <ul class="nav nav-pills pull-right">
-          <li><a href="http://github.com/jurrick/jquery-multicheck">View on GitHub</a></li>
+          <li><a href="http://github.com/jurrick/jquery-multicheckbox">View on GitHub</a></li>
         </ul>
-        <h3 class="text-muted">MultiCheck</h3>
+        <h3 class="text-muted">MultiCheckbox</h3>
       </div>
-      <div class="jumbotron lead text-center">MultiCheck is jquery plugin which convert your multiple select in set of checkboxes</div>
+      <div class="jumbotron lead text-center">MultiCheckbox is jquery plugin which convert your multiple select in set of checkboxes</div>
       <h3>Basic usage</h3>
       <div class="row">
         <div class="col-md-9">
@@ -41,7 +41,7 @@
   &lt;option value="blue"&gt;Blue&lt;/option&gt;
 &lt;/select&gt;</code></pre>
           <h4>JavaScript</h4>
-          <pre><code>$('select').multicheck();</code></pre>
+          <pre><code>$('select').multicheckbox();</code></pre>
         </div>
         <div class="col-md-3">
           <h4>Convert from</h4>
@@ -68,7 +68,7 @@
   &lt;option value="blue"&gt;Blue&lt;/option&gt;
 &lt;/select&gt;</code></pre>
           <h4>JavaScript</h4>
-          <pre><code>$('select').multicheck({scroll_wrapper_enabled: true});</code></pre>
+          <pre><code>$('select').multicheckbox({scroll_wrapper_enabled: true});</code></pre>
         </div>
         <div class="col-md-3">
           <h4>Convert from</h4>
@@ -95,7 +95,7 @@
   &lt;option value="blue"&gt;Blue&lt;/option&gt;
 &lt;/select&gt;</code></pre>
           <h4>JavaScript</h4>
-          <pre><code>$('select').multicheck({
+          <pre><code>$('select').multicheckbox({
   label_wrap: '&lt;div class="checkbox"&gt;&lt;/div&gt;'
 });</code></pre>
         </div>
@@ -124,7 +124,7 @@
   &lt;option data-label-class="label label-success" value="blue"&gt;Blue&lt;/option&gt;
 &lt;/select&gt;</code></pre>
           <h4>JavaScript</h4>
-          <pre><code>$('select').multicheck({
+          <pre><code>$('select').multicheckbox({
   label_wrap: '&lt;div class="checkbox"&gt;&lt;/div&gt;'
 });</code></pre>
         </div>
